--- a/css/styles.css
+++ b/css/styles.css
@@ -31,9 +31,10 @@ img {
 }
 
 .container {
-  max-width: 1158px;
   margin: 0 auto;
-  padding: 0 15px;
+  max-width: 320px;
+  padding-left: 16px;
+  padding-right: 16px;
 }
 
 .section {
@@ -116,8 +117,7 @@ img {
 }
 
 .nav-list {
-  display: flex;
-  gap: 40px;
+  display: none;
 }
 
 .nav-menu {
@@ -152,8 +152,7 @@ img {
 }
 
 .header-address-list {
-  display: flex;
-  gap: 40px;
+  display: none;
 }
 
 .header-address-link {
@@ -174,7 +173,7 @@ img {
 /* Hero section */
 .hero-section {
   align-items: center;
-  padding: 188px 0;
+  padding: 72px 0;
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
@@ -191,12 +190,13 @@ img {
 .hero-title {
   color: #fff;
   text-align: center;
-  font-size: 56px;
+  font-size: 36px;
+  font-style: normal;
   font-weight: 700;
-  line-height: 1.07;
-  letter-spacing: 1.12px;
-  max-width: 496px;
-  margin: 0 auto 48px;
+  line-height: 1.1;
+  letter-spacing: 0.72px;
+  margin: 0 auto 72px;
+  width: 213px;
 }
 
 .hero-button {
@@ -225,15 +225,12 @@ img {
 
 .features-inner {
   display: flex;
-  gap: 24px;
-}
-
-.features-list {
-  width: calc((100% - 72px) / 4);
+  gap: 72px;
+  flex-wrap: wrap;
 }
 
 .features_list_icon {
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: center;
   height: 112px;
@@ -249,6 +246,8 @@ img {
 .our-team-card {
   display: flex;
   gap: 24px;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .our-team-list {
@@ -258,7 +257,6 @@ img {
   box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
     0px 1px 1px 0px rgba(46, 47, 66, 0.16),
     0px 1px 6px 0px rgba(46, 47, 66, 0.08);
-  width: calc((100% - 72px) / 4);
 }
 
 .social_card {
@@ -308,10 +306,10 @@ img {
   gap: 24px;
   row-gap: 48px;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 .our-portfolio-list {
-  width: calc((100% - 48px) / 3);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -664,4 +662,84 @@ img {
   border: none;
   border-radius: 4px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/* MEDIA */
+
+/* @media screen and (min-width: 420px) {
+  .container {
+    max-width: 320px;
+    margin: 0 auto;
+  }
+} */
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+  .nav-list {
+    display: flex;
+    gap: 40px;
+  }
+  .header-address-list {
+    display: flex;
+    flex-direction: column;
+  }
+  .hero-section {
+    padding: 112px 0;
+  }
+  .hero-title {
+    font-size: 56px;
+    line-height: 1.07;
+    letter-spacing: 1.12px;
+    margin: 0 auto 36px;
+    width: 496px;
+  }
+  .features-inner {
+    column-gap: 24px;
+  }
+  .features-list {
+    width: calc((100% - 24px) / 2);
+  }
+  .our-team-list {
+    /* width: calc((100% - 72px) / 2); */
+  }
+  .our-team-card {
+    row-gap: 82px;
+  }
+  .our-portfolio-list {
+    width: calc((100% - 48px) / 2);
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .container {
+    max-width: 1158px;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  .header-address-list {
+    gap: 40px;
+    flex-direction: row;
+  }
+  .hero-section {
+    padding: 188px 0;
+  }
+  .hero-title {
+    margin: 0 auto 48px;
+  }
+  .features_list_icon {
+    display: flex;
+    row-gap: 72px;
+  }
+
+  .features-list {
+    width: calc((100% - 72px) / 4);
+  }
+  .our-team-list {
+    width: calc((100% - 72px) / 4);
+  }
+  .our-portfolio-list {
+    width: calc((100% - 48px) / 3);
+  }
 }
