--- a/css/styles.css
+++ b/css/styles.css
@@ -738,6 +738,10 @@ img {
     display: inline-block;
     margin-bottom: 16px;
   }
+  .model-window {
+    width: 408px;
+    min-height: 584px;
+  }
 }
 
 @media screen and (min-width: 1158px) {
@@ -775,5 +779,9 @@ img {
   }
   .footer-logo {
     margin-right: 120px;
+  }
+  .model-window {
+    width: 408px;
+    min-height: 584px;
   }
 }
